# qimr-teaching-2024

./: .gitignore  README.md  dependencies.R  environment-linux-new.yml  environment-linux.yml  environment-macos.yml  environments-linux-test.yml  environments-macos.yml  pyproject.toml  requirements.txt  runme.sh
000-single-cell-RNAseq/: 000_Single_Cell_RNAseq_Analysis_2024.ipynb  Readme.md
002-spatial-statistics/: 01-tissue_segmentation.ipynb  02-spatial-statistics.ipynb  2.1-tissue_segmentation.ipynb  2.2-spatial-statistics.ipynb  kurtosis.py  startup.R
002-spatial-statistics/notebooks/: cell_segmentation.ipynb  spatial-statistics.ipynb  startup.R  stats.R  tissue_segmentation.ipynb  tissue_segmentation_olfactory_bulb.ipynb  tissue_segmentation_skin_A2.ipynb  voyager.ipynb
003-downstream-analysis/: 3.1_CNV_profiling_R.html  3.1_QIMR_CNV_profiling.ipynb  3.2_hoodscanR.ipynb  3.3_neighborhood.ipynb  3.5_CCI_stLearn_MMCCI.ipynb  CNV_profiling.html  CNV_profiling_R.html  QIMR_CNV_profiling.html  QIMR_CNV_profiling.ipynb  hoodscanR.ipynb  neighborhood.ipynb
003-single-cell/: spatialdata_visualisations.ipynb
004-spatial-statistics/: 4.1-tissue_segmentation.ipynb  4.2-spatial-statistics.ipynb  morani.py  stats.R
005-community-analysis/: neighborhood.ipynb
005-spatial-proteomics/: CODEX_analysis.ipynb
006-spatial-proteomics/: CODEX_analysis.ipynb
007-cell-cell-interaction/: stLearn_MMCCI.ipynb
src/qimrtraining/: utils.py
